# l2cppnc

./: CMakeLists.txt  cppnc.cpp  socket.cpp  socket.hpp  socket_internal.hpp  somethingelse.hpp
.github/workflows/: main.yml
include/: connectionhub.hpp  epoll.hpp  fd.hpp  logging.hpp  socket.hpp  sukat.hpp
src/: CMakeLists.txt  logging.cpp  socket.cpp
test/: CMakeLists.txt  test_socket.cpp
util/: cppnc.cpp
